--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/resources/lib/jimObjModelImporterJFX.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>com.jfoenix</groupId>
+			<artifactId>jfoenix</artifactId>
+			<version>9.0.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -42,7 +47,7 @@
 						<!-- Usage: mvn clean javafx:run -->
 						<id>default-cli</id>
 						<configuration>
-							<mainClass>br.udesc.game.App</mainClass>
+							<mainClass>br.udesc.game.MachineStrike3d</mainClass>
 						</configuration>
 					</execution>
 				</executions>
