Adicionado pattern State + textura de tombstone

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>jfoenix</artifactId>
 			<version>9.0.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-media</artifactId>
+			<version>13</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
